[macosx] Cleanup "may not respond to selector" warnings in native code

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 8
    • Component/s: client-libs
    • b06
    • os_x

        There are several places where native compiler warns that an nonexistent method selector is called. These should be cleaned up.

              Assignee:
              Petr Pchelko (Inactive)
              Reporter:
              Petr Pchelko (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: