8027561: [macosx] Cleanup "may not respond to selector" warnings in native code

Reviewed-by: azvegint, serb